[iOS] Make omnibox accelerator button close find in page.

Makes the accelerator omnibox button in the bottom toolbar dismiss the
find in page popup on press.

Bug: 863002
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ic293d90856a10d08c50edf8987c3eb4838c2c395
Reviewed-on: https://chromium-review.googlesource.com/1181046
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Stepan Khapugin <stkhapugin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584425}
Former-commit-id: ce03043473691f9cf74246adbc85dce6c8a69c5a